<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailMenuActivity">

    <!--Happy Code - Bima Maarschal-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/cristmas_eve"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/priceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rp"
                android:textAlignment="center"
                android:textColor="@color/red_wrath"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/picfood"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/gambar"
                app:srcCompat="@drawable/pizza" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/minusBtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/plusminus_background"
                    android:contentDescription="@string/kurang"
                    app:srcCompat="@drawable/before" />

                <TextView
                    android:id="@+id/numberOrderTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textColor="@color/cristmas_eve"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/plusBtn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/plusminus_background"
                    android:contentDescription="@string/tambah"
                    app:srcCompat="@drawable/next" />

            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/addToCartBtn"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/mulai_button"
                android:elevation="3dp"
                android:gravity="center"
                android:text="@string/tambah_pilihan"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </ScrollView>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/hitung"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/cristmas_eve"
            android:contentDescription="@string/fungsi_tombol_order"
            android:elevation="3dp"
            android:src="@drawable/kembali_food"
            app:backgroundTint="#ff5e00"
            app:maxImageSize="30dp"
            app:tint="#ffffff">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>