<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/cart_background"
    android:elevation="3dp">

    <!--Happy Code - Bima Maarschal-->

    <ImageView
        android:id="@+id/picCart"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pop_1"
        android:contentDescription="@string/subjek" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textColor="@color/cristmas_eve"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/picCart"
        app:layout_constraintTop_toTopOf="@+id/picCart" />

    <ImageView
        android:id="@+id/minusCartBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/picCart"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        android:background="@drawable/plusminus_background"
        android:contentDescription="@string/kurang"
        app:srcCompat="@drawable/before"  />

    <TextView
        android:id="@+id/numberItemTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_1"
        android:textColor="#373b54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/minusCartBtn"
        app:layout_constraintStart_toEndOf="@+id/minusCartBtn"
        app:layout_constraintTop_toTopOf="@+id/minusCartBtn" />

    <ImageView
        android:id="@+id/plusCardBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/minusCartBtn"
        app:layout_constraintStart_toEndOf="@+id/numberItemTxt"
        app:layout_constraintTop_toTopOf="@+id/minusCartBtn"
        android:background="@drawable/plusminus_background"
        android:contentDescription="@string/tambah"
        app:srcCompat="@drawable/next"  />

    <TextView
        android:id="@+id/feeEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/_0"
        android:textColor="#373b54"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/rp"
        android:textColor="#ff3d00"
        app:layout_constraintBottom_toBottomOf="@+id/feeEachItem"
        app:layout_constraintEnd_toStartOf="@+id/feeEachItem"
        app:layout_constraintTop_toTopOf="@+id/feeEachItem" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textColor="#373b54"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/plusCardBtn"
        app:layout_constraintEnd_toEndOf="@+id/feeEachItem"
        app:layout_constraintTop_toTopOf="@+id/plusCardBtn" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/rp"
        android:textColor="#ff3d00"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/totalEachItem"
        app:layout_constraintEnd_toStartOf="@+id/totalEachItem"
        app:layout_constraintTop_toTopOf="@+id/totalEachItem" />

</androidx.constraintlayout.widget.ConstraintLayout>